--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,17 +1,26 @@
-.products-title {
-  display: block;
-  justify-content: center;
-  align-items: center;
+.products {
+  padding-top: 120px;
+  padding-bottom: 98px;
+}
 
-  width: 200px;
+.products-title {
+  margin-left: auto;
+  margin-right: auto;
   display: block;
   text-align: center;
   justify-content: center;
-  margin-top: 32px;
+
+  @include size(tablet) {
+    margin-bottom: 150px;
+  }
+
+  @include size(desktop) {
+    margin-bottom: 259px;
+  }
 }
 
 .products-text-title {
-  font-family: Titan One;
+  font-family: Titan One, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -19,13 +28,25 @@
 
   text-align: center;
   text-transform: uppercase;
-  margin-top: 15px;
+  margin-bottom: 15px;
 
   color: getColor('intensive-pink');
+
+  @include size(tablet) {
+    font-size: 26px;
+    line-height: 1.15;
+    letter-spacing: 0em;
+  }
+
+  @include size(desktop) {
+    font-size: 30px;
+    line-height: 1.13;
+  }
 }
 
 .products-main-title {
-  font-family: Titan One;
+  margin-bottom: 144px;
+  font-family: Titan One, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 34px;
@@ -36,20 +57,190 @@
   text-transform: uppercase;
 
   color: getColor('accent-color');
+
+  @include size(tablet) {
+    font-size: 48px;
+  }
+
+  @include size(desktop) {
+    font-size: 58px;
+    line-height: 1.13;
+    letter-spacing: 0.06em;
+  }
+}
+
+.cards-item {
+  display: block;
+
+  @include size(tablet) {
+    justify-content: center;
+    display: flex;
+  }
 }
 
 .cards-list {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 161px;
+  padding-bottom: 41px;
   width: 280px;
   height: 485px;
   background-color: getColor('dark-background-color');
   border-radius: 24px;
-  margin-top: 17px;
+  margin-bottom: 130px;
+
+  @include size(tablet) {
+    padding-top: 152px;
+    padding-bottom: 40px;
+  }
+
+  @include size(desktop) {
+    padding-top: 163px;
+    padding-bottom: 50px;
+  }
+
+  &:last-child {
+    margin-bottom: 0px;
+  }
+
+  &:nth-child(2) {
+    background-color: getColor('brown');
+  }
+
+  &:nth-child(3) {
+    background-color: getColor('green');
+
+    @include size(tablet) {
+      margin-right: 0;
+    }
+  }
+
+  @include size(tablet) {
+    margin-left: 0;
+    margin-right: 20px;
+    width: 220px;
+    margin-bottom: 0;
+  }
+
+  @include size(desktop) {
+    margin-right: 24px;
+    width: 329px;
+    height: 525px;
+  }
 }
 
-.cards-list:nth-child(2) {
-  background-color: getColor('brown');
+.cards-img {
+  margin: 0;
+  width: 249px;
+  height: 252px;
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  transform: translate(15px, -113px);
+
+  @include size(tablet) {
+    width: 220px;
+    height: 226px;
+    transform: translate(1px, -104px);
+  }
+
+  @include size(desktop) {
+    width: 335px;
+    height: 335px;
+    transform: translate(1px, -210px);
+  }
 }
 
-.cards-list:nth-child(3) {
-  background-color: getColor('green');
+.cards-box-title {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 1.15;
+
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+
+  color: getColor('white');
+
+  @include size(desktop) {
+    font-size: 30px;
+    line-height: 1.13;
+  }
+}
+
+.cards-text {
+  padding-right: 39px;
+  padding-left: 41px;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.52;
+
+  text-align: center;
+  letter-spacing: 0.04em;
+
+  color: getColor('white');
+  overflow: hidden;
+
+  @include size(tablet) {
+    padding-right: 11px;
+    padding-left: 11px;
+    line-height: 1.9;
+    height: 124px;
+  }
+
+  @include size(desktop) {
+    padding-right: 44px;
+    padding-left: 44px;
+    font-size: 16px;
+    line-height: 1.76;
+    height: 106px;
+  }
+}
+
+.cards-link {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
+  @include size(desktop) {
+    margin-top: 32px;
+    margin-bottom: 32px;
+  }
+}
+
+.cards-svg {
+  width: 26px;
+  height: 6px;
+  fill: getColor('white');
+}
+
+.icon-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+
+  @include size(tablet) {
+    margin-top: 40px;
+  }
+
+  @include size(desktop) {
+    margin-top: 62px;
+  }
+}
+
+.cards-icon {
+  width: 40px;
+  height: 40px;
+  fill: getColor('accent-color');
+  background-color: getColor('white');
+  border-radius: 50%;
 }
