--- a/src/partials/him.html
+++ b/src/partials/him.html
@@ -1,4 +1,4 @@
-<section class="him-background">
+<section id="him" class="him-background">
   <section class="container">
   <hgroup class="him-section-title">
     <h3>tradition and love </h3>
