--- a/src/partials/him.html
+++ b/src/partials/him.html
@@ -1,19 +1,45 @@
-<section class="container">
-  <hgroup>
-    <h2>tradition and love </h2>
-    <h3>how it’s made?</h3>
+<section id="him" class="him-background">
+  <section class="container">
+  <hgroup class="him-section-title">
+    <h3>tradition and love </h3>
+    <h2>how it’s made?</h2>
   </hgroup>
-  <div>
-    <p>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
-    <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
+  <div class="him-flex-container">
+    <picture class="him-picture">
+      <source srcset="./images/him/desktop/how-its-made-cow.png 1x, ./images/him/desktop/how-its-made-cow.png 2x"
+              media="(min-width:1200px)" />
+      <source srcset="./images/him/tablet/how-its-made-cow.png 1x, ./images/him/tablet/how-its-made-cow.png 2x"
+              media="(min-width:768px)" />
+      <source srcset="./images/him/mobile/how-its-made-cow.png 1x, ./images/him/tablet/how-its-made-cow.png 2x"
+              media="(min-width:480px)" />
+      <img class="image" src="./images/him/desktop/how-its-made-cow.png" alt="cow" width="516" />
+    </picture>
 
 
-      Aliquam erat volutpat. Aenean accumsan.</p>
-    <button>Read more</button>
+    <div class="him-div-bg">
+      <p> Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus,
+        faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+      <p class="him-text-padding"> Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris
+        rhoncus
+        orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa
+        nibh, tincidunt.</p>
+      <p class="line">Aliquam erat volutpat. Aenean accumsan.</p>
+      <button class="button btn-him" type="button"> Read more</button>
+    </div>
   </div>
-  <ul>
-    <li><p>721</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</li>
-    <li><p>16kg</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</li>
-    <li><p>84</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</li>
+  <ul class="him-flex-container him-list">
+    <li class="him-item">
+      <!--      <img src="../images/cow-milk.svg" alt="" />-->
+      <p class="bullet-him">721</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+    </li>
+    <li class="him-item">
+      <!--      <img src="../images/apple-basket.svg" alt="">-->
+      <p class="bullet-him">16kg</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+    </li>
+    <li class="him-item">
+      <!--      <img src="../images/heart-candy.svg" alt="">-->
+      <p class="bullet-him">84</p>Aliquam ac dui vel dui vnpmulputate consectetur. Mauris massa.
+    </li>
   </ul>
+  </section>
 </section>
