--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,14 +4,18 @@
             <h1 class="hero-text">ice cream made with
                 <span class="hero-text-accent">passion</span>
             </h1>
-            <a class="hero-button" href="">Products</a>
-            <a class="hero-button hero-button-white" href="">How it’s made?</a>
+            <a class="hero-button" href="#products">Products</a>
+            <a class="hero-button hero-button-white" href="#made">How it’s made?</a>
         </div>
 
         <div class="hero-made-box">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             </p>
-            <a class="hero-svg" href="">button svg</a>
+            <a class="hero-svg-arrow-link" href="">
+                <svg class="svg-arrow">
+                    <use href="./images/svg/sprite.svg#arrow-products"></use>
+                </svg>
+            </a>
         </div>
         <div class="hero-info">
             <ul>
