--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -11,9 +11,20 @@
   padding-left: 20px;
 
   background-image: url(../images/hero/hero-ice-mobile-1x.png),
-    url(../images/hero/hero-ellipse-pink-mobile-1x.png);
-  background-position: bottom right 32px, right center;
+    url(../images/hero/hero-ellipse-pink-tablet-1x.png);
+  background-position: bottom right 32px, right -50px center;
   background-repeat: no-repeat;
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (-webkit-min-device-pixel-ratio: 2),
+    screen and (-o-min-device-pixel-ratio: 2/1),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero-container {
+      background-image: url(../images/hero/hero-ice-mobile-@x2.png),
+        url(../images/hero/hero-ellipse-pink-tablet-@x2.png);
+    }
+  }
 
   @include size(tablet) {
     padding-top: 102px;
@@ -30,6 +41,21 @@
     background-position: bottom right 247px, bottom right 34px,
       right 137px bottom 46px, left 34px bottom 28px, top 94px right 34px,
       top 151px right 34px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (-o-min-device-pixel-ratio: 2/1),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .hero-container {
+        background-image: url(../images/hero/hero-ice-tablet-@x2.png),
+          url(../images/hero/hero-woman-tablet-@x2.png),
+          url(../images/hero/hero-ellipse-pink-tablet-@x2.png),
+          url(../images/hero/hero-milk-tablet-@x2.png),
+          url(../images/hero/hero-ellipse-white-tablet-@x2.png),
+          url(../images/hero/hero-ellipse-white-tablet-@x2.png);
+      }
+    }
   }
 
   @include size(desktop) {
@@ -46,6 +72,21 @@
     background-position: bottom right 450px, bottom right 109px,
       right 267px bottom 75px, left 77px bottom 45px, top 156px right 97px,
       top 248px right 97px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (-o-min-device-pixel-ratio: 2/1),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .hero-container {
+        background-image: url(../images/hero/hero-ice-desktop-@x2.png),
+          url(../images/hero/hero-woman-desktop-@x2.png),
+          url(../images/hero/hero-ellipse-pink-desktop-@x2.png),
+          url(../images/hero/hero-milk-desktop-@x2.png),
+          url(../images/hero/hero-ellipse-white-desktop-@x2.png),
+          url(../images/hero/hero-ellipse-white-desktop-@x2.png);
+      }
+    }
   }
 }
 
@@ -54,10 +95,14 @@
 }
 
 .hero-text {
+  display: grid;
+
   margin-bottom: 19px;
+
   width: 218px;
   height: 106px;
-  font-family: Titan One;
+
+  font-family: Titan One, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 26px;
@@ -99,12 +144,12 @@
 }
 
 .hero-button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
   width: 62px;
   height: 24px;
-
-  padding: 9px 15px;
-
-  text-decoration: none;
 
   margin-right: 8px;
 
@@ -117,9 +162,11 @@
   color: getColor('white');
   background-color: getColor('accent-color');
 
+  cursor: pointer;
+
   &:hover,
   &:focus {
-    background-color: #c7133e;
+    background-color: getColor('hover-button');
   }
 
   @include size(desktop) {
@@ -127,8 +174,6 @@
     height: 40px;
 
     margin-right: 15px;
-
-    padding: 15px 23px;
 
     font-size: 14px;
     line-height: 1.3;
@@ -144,11 +189,10 @@
 
   &:hover,
   &:focus {
-    background-color: #ecebeb;
+    background-color: getColor('hover-white-button');
   }
 
   @include size(desktop) {
-    margin-right: 15px;
     width: 138px;
     height: 40px;
   }
@@ -181,10 +225,6 @@
   }
 }
 
-.hero-svg {
-  display: block;
-}
-
 .hero-info {
   position: absolute;
   top: 96px;
@@ -208,7 +248,7 @@
 }
 
 .hero-info-number {
-  font-family: Titan One;
+  font-family: Titan One, sans-serif;
 
   font-size: 28px;
   line-height: 1.15;
@@ -231,5 +271,46 @@
 
   @include size(desktop) {
     font-size: 14px;
+  }
+}
+
+.hero-svg-arrow-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  outline: none;
+
+  margin-top: 7px;
+
+  width: 18px;
+  height: 18px;
+
+  border-radius: 50%;
+  background-color: getColor('white');
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @include size(desktop) {
+    width: 26px;
+    height: 26px;
+
+    margin-top: 20px;
+  }
+
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+  }
+}
+
+.svg-arrow {
+  width: 6px;
+  height: 6px;
+  fill: getColor('accent-color');
+
+  @include size(desktop) {
+    width: 9px;
+    height: 9px;
   }
 }
