--- a/src/sass/utils/_colors.scss
+++ b/src/sass/utils/_colors.scss
@@ -9,6 +9,8 @@ $colors: (
   'dark-background-color': #ffb8ca,
   'light-background-color': #fff5f6,
   'green': #c2e297,
+  'hover-button': #c7133e,
+  'hover-white-button': #ecebeb,
   'menu-bg-cl': #e17992,
   'menu-border-cl': #e18298,
   'text-decoration-color': #e1e1e1,
@@ -16,6 +18,7 @@ $colors: (
   'slider-reddots-color': #c7133e,
   'slider-indicators-color': #d9d9d9,
   'quotation-marks-color': rgba(126, 122, 122, 0.144),
+
 );
 
 @function getColor($key) {
