--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -32,7 +32,7 @@
                     </a>
                 </li>
                 </ul>
-            <p>Feel free to contact <a class="footer-contact" href="tel:+61(0)383766284"> +61 (0) 383 766 284</a> </p>
+            <p class="footer-text">Feel free to contact <a class="footer-contact" href="tel:+61(0)383766284"> +61 (0) 383 766 284</a> </p>
             </li>
         </ul>
     </div>
