--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,5 @@
     <footer class="footer">
-        <div class="container"> 
-        <ul class="footer-container">
+        <ul class="container footer-container">
             <li class="footer-left">
                 <h2 class="footer-head-first">homemade ice cream made</h2>
                 <h2 class="footer-head-second">with passion</h2>
@@ -35,6 +34,5 @@
             <p class="footer-text">Feel free to contact <a class="footer-contact" href="tel:+61(0)383766284"> +61 (0) 383 766 284</a> </p>
             </li>
         </ul>
-    </div>
     </footer>
     <div class="copyright-container"><span class="copyright-text"> &copy; 2019 - IceCream. All Rights Reserved.</span></div>
