--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -137,7 +137,7 @@
         target="_blank"
         rel="noopener noreferrer"
         >Our Locations
-        <svg class="arrow-svg">
+        <svg class="contacts-arrow-svg">
           <use href="../src/images/svg/sprite.svg#arrow-right"></use></svg
       ></a>
       <a
@@ -146,7 +146,7 @@
         target="_blank"
         rel="noopener noreferrer"
         >Franchise
-        <svg class="arrow-svg">
+        <svg class="contacts-arrow-svg">
           <use href="../src/images/svg/sprite.svg#arrow-right"></use></svg
       ></a>
     </div>
