--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,7 +15,7 @@
       
           </button>
           <ul class="header-menu">
-            <li class="item"><a class="header-menu-link" href="index.html">Home</a></li>
+            <li class="item"><a class="header-menu-link active-page" href="index.html">Home</a></li>
             <li class="item"><a class="header-menu-link" href="">About us</a></li>
             <li class="item"><a class="header-menu-link" href="#him">How it’s made?</a></li>
             <li class="item"><a class="header-menu-link" href="#products">Our products</a></li>
