--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
 
-
   font-family: DM Sans, sans-serif;
   font-weight: 700;
   font-size: 16px;
@@ -25,4 +24,7 @@
 
     @include transition('transition-property');
   }
+}
+.header-menu-link.active-page {
+  color: getColor(accent-color);
 }
