--- a/src/partials/him.html
+++ b/src/partials/him.html
@@ -4,7 +4,7 @@
     <h3>tradition and love </h3>
     <h2>how it’s made?</h2>
   </hgroup>
-  <div class="him-flex-container">
+  <div class="him-flex-container him-bg">
     <picture class="him-picture">
       <source srcset="./images/him/desktop/how-its-made-cow.png 1x, ./images/him/desktop/how-its-made-cow.png 2x"
               media="(min-width:1200px)" />
@@ -29,16 +29,13 @@
   </div>
   <ul class="him-flex-container him-list">
     <li class="him-item">
-      <!--      <img src="../images/cow-milk.svg" alt="" />-->
-      <p class="bullet-him">721</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      <p class="bullet-him milk">721</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
     </li>
     <li class="him-item">
-      <!--      <img src="../images/apple-basket.svg" alt="">-->
-      <p class="bullet-him">16kg</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      <p class="bullet-him apple">16kg</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
     </li>
     <li class="him-item">
-      <!--      <img src="../images/heart-candy.svg" alt="">-->
-      <p class="bullet-him">84</p>Aliquam ac dui vel dui vnpmulputate consectetur. Mauris massa.
+      <p class="bullet-him candy">84</p>Aliquam ac dui vel dui vnpmulputate consectetur. Mauris massa.
     </li>
   </ul>
   </section>
