--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -204,11 +204,13 @@
 }
 
 .cards-link {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
 
   @include size(desktop) {
     margin-top: 32px;
@@ -217,16 +219,42 @@
 }
 
 .cards-svg {
-  width: 26px;
+  width: 6px;
   height: 6px;
-  fill: getColor('white');
+  // fill: getColor('white');
+  background-color: getColor('white');
+  border-radius: 50%;
+  margin-right: 4px;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .icon-link {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: auto;
+  margin-left: auto;
+  outline: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: getColor('white');
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-top: 30px;
+
+  &:hover,
+  &:focus {
+    background-color: getColor('accent-color');
+  }
+
+  &:hover .cards-icon,
+  &:focus .cards-icon {
+    fill: getColor('white');
+  }
 
   @include size(tablet) {
     margin-top: 40px;
@@ -238,9 +266,7 @@
 }
 
 .cards-icon {
-  width: 40px;
-  height: 40px;
+  width: 18px;
+  height: 18px;
   fill: getColor('accent-color');
-  background-color: getColor('white');
-  border-radius: 50%;
 }
