--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -13,6 +13,9 @@
   @include size(tablet) {
     padding: 37px 35px 15px 35px;
   }
+  @include size(desktop) {
+    padding: 37px 46px 15px 46px;
+  }
 }
 
 .header-nav {
