Winter is Coming......

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -41,11 +41,16 @@
               src="./images/slider/mobile/slider-comment-pic-1.jpg"
               alt="Emily, Los Angeles"
             />
-            <p class="slider__content_text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
+            <div class="slider__content_box">
+              <p class="slider__content_text">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
+                Lorem ipsum primis in nibh vel risus.
+              </p>
+              <div class="slider__content_gradientbox">
+                <div class="slider__content_gradient"></div>
+              </div>
+            </div>
             <svg class="slider__content_reddot" width="4" height="4">
               <use href="./images/svg/red-dot.svg"></use>
             </svg>
@@ -69,11 +74,16 @@
               src="./images/slider/mobile/slider-comment-pic-2.jpg"
               alt="Emily, Los Angeles"
             />
-            <p class="slider__content_text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
+            <div class="slider__content_box">
+              <p class="slider__content_text">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
+                Lorem ipsum primis in nibh vel risus.
+              </p>
+              <div class="slider__content_gradientbox">
+                <div class="slider__content_gradient"></div>
+              </div>
+            </div>
             <svg class="slider__content_reddot" width="4" height="4">
               <use href="./images/svg/red-dot.svg"></use>
             </svg>
@@ -97,11 +107,16 @@
               src="./images/slider/mobile/slider-comment-pic-3.jpg"
               alt="Emily, Los Angeles"
             />
-            <p class="slider__content_text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
+            <div class="slider__content_box">
+              <p class="slider__content_text">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
+                Lorem ipsum primis in nibh vel risus.
+              </p>
+              <div class="slider__content_gradientbox">
+                <div class="slider__content_gradient"></div>
+              </div>
+            </div>
             <svg class="slider__content_reddot" width="4" height="4">
               <use href="./images/svg/red-dot.svg"></use>
             </svg>
