--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -12,7 +12,11 @@
 
   background-image: url(../images/hero/hero-ice-mobile-1x.png),
     url(../images/hero/hero-ellipse-pink-tablet-1x.png);
-  background-position: bottom right 32px, right -50px center;
+  // background-position: bottom right 32px, right -50px center;
+
+  @include size(mobile-only) {
+    background-position: bottom right 80px, right 5px center;
+  }
 
   background-repeat: no-repeat;
 
