--- a/src/sass/components/_him.scss
+++ b/src/sass/components/_him.scss
@@ -241,3 +241,11 @@
     width: 222px;
   }
 }
+
+.him-svg {
+  fill: getColor('accent-color');
+  width: 10px;
+  height: 10px;
+  display: block;
+  margin-left:10px;
+}
