--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,7 @@
 @import 'utils/size';
 @import 'utils/transition';
 @import 'base/button';
+@import 'base/overflow';
 @import 'components/container';
 @import 'components/body';
 @import 'components/header';
