--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -223,24 +223,35 @@
 }
 
 .icon-link {
+  position: absolute;
+  left: 120px;
+  right: 120px;
+  bottom: 60px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
+  background-color: getColor('white');
+  border: 0px;
 
   @include size(tablet) {
-    margin-top: 40px;
+    left: 90px;
+    right: 90px;
+    bottom: 40px;
   }
 
   @include size(desktop) {
-    margin-top: 62px;
+    left: 145px;
+    right: 145px;
+    bottom: 50px;
   }
 }
 
 .cards-icon {
+  fill: getColor('accent-color');
+  border-radius: 50%;
   width: 40px;
   height: 40px;
-  fill: getColor('accent-color');
-  background-color: getColor('white');
-  border-radius: 50%;
 }
