--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -232,6 +232,13 @@
 }
 
 .icon-link {
+  position: absolute;
+  left: 120px;
+  right: 120px;
+  bottom: 60px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -257,11 +264,15 @@
   }
 
   @include size(tablet) {
-    margin-top: 40px;
+    left: 90px;
+    right: 90px;
+    bottom: 40px;
   }
 
   @include size(desktop) {
-    margin-top: 62px;
+    left: 145px;
+    right: 145px;
+    bottom: 50px;
   }
 }
 
