--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -236,9 +236,6 @@
   left: 120px;
   right: 120px;
   bottom: 60px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -248,6 +245,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  border: 0;
   background-color: getColor('white');
 
   @include transition(background-color);
